gitops/infrastructure/monitoring/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: monitoring
spec:
  hosts:
    - "lixiaojun.io"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: "/prometheus"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: prometheus-server.monitoring.svc.cluster.local
            port:
              number: 9090
